Fix z-index

--- a/frontend/components/Marquees/Marquee.module.css
+++ b/frontend/components/Marquees/Marquee.module.css
@@ -2,7 +2,7 @@
   height: 100vh;
   overflow: hidden;
   position: relative;
-  z-index: 10;
+  z-index: 20;
 }
 
 .marquee {
