--- a/frontend/styles/Home.module.css
+++ b/frontend/styles/Home.module.css
@@ -19,7 +19,7 @@
   top: 50%;
   margin-left: -40vw;
   margin-top: -40vw;
-  z-index: 20;
+  z-index: 30;
 }
 
 .btnInner {
@@ -51,6 +51,6 @@
   width: 100%;
   height: 100%;
 
-  z-index: 15;
+  z-index: 10;
   color: red;
 }
